singlenoderf.Tree.compress() to adapt to DTree to serialize to java code